# AlphaEvolveLite

./: .alpha_tmp.py  .gitignore  .semgrepignore  LICENSE  README.md  evolutionary_controller_flow.md  pyproject.toml  requirements.txt
alphaevolve/: config.py  controller.py  db.py  individual_generator.py  llm.py  log.py  patcher.py  problem.py  program_generator.py  prompts.py  response_parser.py  utils.py
alphaevolve/llm/: __init__.py  clients.py  config.py  engine.py
alphaevolve/prompts/: __init__.py  prompt_sampler.py
alphaevolve/prompts/templates/: evolution.jinja  feedback.jinja  retry.jinja
examples/book_scanning/: config.yml  evaluate.py  initial_program.py  initial_program_andreabac3.py  initial_program_o3.py
examples/canterbury_compression/: bz2_bench.py  config.yml  evaluate.py  initial_program.py  lzma_bench.py  zlib_bench.py
examples/fibonacci/: README.md  config.yml  evaluate.py  solution.py
examples/lru_cache/: best_evolved.py  config.yml  evaluate.py  evaluate_multiple.py  initial_program.py  pro_one_shot.py  pylru_lib_program.py
examples/timetable_optimization/: chatgpt.py  config.yml  evaluate.py  opt_test.py  readme.md  solution.py
examples/timetable_optimization/inputs/: class_list.csv  lessons_required.csv  student_classes.csv  student_list.csv  teacher_classes.csv  teacher_list.csv  timeslots.csv  weekdays.csv
scripts/: README_visualization.md  init_db.py  run.py  view_conversation.py  visualize_experiment.py
tests/: __init__.py  test_evolve_blocks.py  test_patcher.py  test_structured_responses.py  test_timeouts.py
