# pyproject.toml
[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name        = "alphaevolve-lite"
version     = "0.1.0"
description = "Minimal open-source AlphaEvolve"
authors     = [{ name = "Kelian" }]

[tool.setuptools.packages.find]
include = ["alphaevolve*"]
exclude = ["results*", "examples*", "scripts*", "tests*"]